WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157701
REGRESSION (
r200463
): Autofill Credit Card expected but got Autofill Contact
https://bugs.webkit.org/show_bug.cgi?id=157701
Summary
REGRESSION (r200463): Autofill Credit Card expected but got Autofill Contact
Sam Weinig
Reported
2016-05-13 19:22:14 PDT
REGRESSION (
r200463
): Autofill Credit Card expected but got Autofill Contact
Attachments
Patch
(1.69 KB, patch)
2016-05-13 19:24 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2016-05-13 19:24:53 PDT
Created
attachment 278911
[details]
Patch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug